# Game-Save-Manager

./: .gitignore  Backup_Class.py  Cargo.toml  Config.ini  GSM.pyw  Game_info.csv  Main.py  Main.pyw  README.md  game.py  game_save_manager.pyw  logger.py  main.py  main.pyw  pyproject.toml  requirements.txt  run_game_save_manager.bat  run_game_save_manager.vbs  scoring.json  settings.json  test_backup.py  test_game.py  test_main.py  test_save_search.py  testing backup.py  testing game.py  testing main.py  testing.py
Testing/Folder Example/: test.txt
benches/: my_benchmark.rs
classes/: backup.py  database.py  game.js  game.py  gui.py  helper.py  logger.py  restore.py  save_finder.py  save_search.py
config/: config.py  settings.ini  settings.json
rust/: Cargo.toml
rust/src/: main.rs
save_search_rust/: Cargo.toml
save_search_rust/src/: main.rs
src/: lib.rs  readme.md  searcher.rs
test/: run all tests.py  test_backup.py  test_game.py  test_helper.py  test_main.py  test_save_search.py  testing.db
tests/: rust_tests.rs  test_backup.py  test_database.py  test_game.py  test_helper.py  test_main.py  test_save_search.py  test_utils.py  testing.db
tests/Folder Test/Dishonored 2/: save.txt
utils/: backup.py  database.py  game.py  restore.py  utils.py
