[package]
name = "save_searcher"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "save_searcher"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
walkdir = "2"

[dev-dependencies]
criterion = "0.3"
